--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   stacked_services: ^1.5.1
   flutter_custom_carousel: ^0.1.0+1
   persistent_bottom_nav_bar: ^6.2.1
+  lottie: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/bookImages/
     - assets/
+    - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
