--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_custom_carousel: ^0.1.0+1
   persistent_bottom_nav_bar: ^6.2.1
   lottie: ^3.2.0
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
