--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   lottie: ^3.2.0
   shared_preferences: ^2.3.4
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
